--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="js/piece.js"></script>          <!-- 1. Определяет Piece -->
     <script src="js/move-validator.js"></script> <!-- 2. Зависит от Piece -->
     <script src="js/move-highlighter.js"></script> <!-- 3. Зависит от Piece -->
