Remove knight from pawn evolution options

--- a/evolution-chess-2-alfa/evolutino-chess.html
+++ b/evolution-chess-2-alfa/evolutino-chess.html
@@ -418,7 +418,7 @@ const PIECE_TYPES = {
  */
 const EVOLUTION_TREE = {
     // TIER 1 -> TIER 2
-    'pawn': ['pawn_soldier', 'pawn_spearman', 'pawn_torpedo', 'knight'],
+    'pawn': ['pawn_soldier', 'pawn_spearman', 'pawn_torpedo'],
     'knight': ['knight_camel', 'knight_paladin', 'knight_knight'],
     'bishop': ['bishop_bomber', 'bishop_ghost', 'two_color_bishop'],
     'rook': ['rook_tank', 'rook_ghost'],
