Comment out subtitle and game start log
Commented out the subtitle and game start log messages.

--- a/evolution-chess-2-alfa/evolutino-chess.html
+++ b/evolution-chess-2-alfa/evolutino-chess.html
@@ -211,7 +211,7 @@
 <body>
 
     <h1>Шахматы: Эволюция Фигур V2.3</h1>
-    <div class="subtitle">Исправлена логика Танка и Копейщика</div>
+    <!-- <div class="subtitle">Исправлена логика Танка и Копейщика</div> -->
 
     <div class="game-container">
         <div id="board"></div>
@@ -458,7 +458,7 @@ function initGame() {
     gameOver = false;
     possibleMoves = [];
     document.getElementById('game-log').innerHTML = '';
-    log('Игра началась! Танк теперь медленный, а копейщик опасный.');
+    // log('Игра началась! Танк теперь медленный, а копейщик опасный.');
     renderBoard();
     updateInfo();
 }
