--- a/evolution-chess-2-alfa/evolutino-chess.html
+++ b/evolution-chess-2-alfa/evolutino-chess.html
@@ -287,7 +287,7 @@ const PIECE_TYPES = {
     'knight_paladin': { name: 'Паладин', symbol: SYMBOLS.paladin, tier: 2, xpReq: 2, moves: [...step(VEC_KNIGHT), ...step(VEC_DIAG)] },
     'knight_knight': { name: 'рыцарь', symbol: SYMBOLS.knight_knight, tier: 2, xpReq: 1, moves: [...step(VEC_KNIGHT), ...step(VEC_ORTHO)] },
 
-    'bishop_bomber': { name: 'Бомбардир', symbol: SYMBOLS.bomber, tier: 2, xpReq: 2, moves: slide(VEC_DIAG), special: 'detonate_3' },
+    'bishop_bomber': { name: 'Бомбардир', symbol: SYMBOLS.bomber, tier: 2, xpReq: 2, moves: slide(VEC_DIAG), special: 'detonate_3' }, //detonate - explode only when this piece is captured, explode - explode if you capture orw was captured
     'bishop_ghost': { name: 'Призрак', symbol: SYMBOLS.ghost, tier: 2, xpReq: 2, moves: slide(VEC_DIAG), ghost: true },
     'two_color_bishop': { name: 'двухцветный слон', symbol: SYMBOLS.two_color_bishop, tier: 2, xpReq: 1, moves: [...slide(VEC_DIAG), ...step(VEC_ORTHO), ...step(VEC_DIAG)] },
 
@@ -586,7 +586,21 @@ function makeMove(fromX, fromY, move) {
             log('boom!!!!!');
             // return;
         }
-        if (PIECE_TYPES[target.type].special === 'detonate_3') {
+        else if (PIECE_TYPES[target.type].special === 'detonate_3') {
+            const radius = target.type.special === 'explode_5' ? 2 : 1; 
+            explode(toX, toY, board[toY][toX].color, radius);
+            explosion = true;
+            log('boom!!!!!');
+            // return;
+        }
+        else if (PIECE_TYPES[target.type].special === 'explode_5') {
+            const radius = target.type.special === 'explode_5' ? 2 : 1; 
+            explode(toX, toY, board[toY][toX].color, radius);
+            explosion = true;
+            log('boom!!!!!');
+            // return;
+        }
+        else if (PIECE_TYPES[target.type].special === 'detonate_5') {
             const radius = target.type.special === 'explode_5' ? 2 : 1; 
             explode(toX, toY, board[toY][toX].color, radius);
             explosion = true;
