--- a/evolution-chess-2-alfa/evolutino-chess.html
+++ b/evolution-chess-2-alfa/evolutino-chess.html
@@ -264,6 +264,10 @@ const VEC_DIAG = [{dx:1,dy:1},{dx:1,dy:-1},{dx:-1,dy:1},{dx:-1,dy:-1}];
 const VEC_KNIGHT = [{dx:2,dy:1},{dx:2,dy:-1},{dx:-2,dy:1},{dx:-2,dy:-1},{dx:1,dy:2},{dx:1,dy:-2},{dx:-1,dy:2},{dx:-1,dy:-2}];
 const VEC_CAMEL = [{dx:3,dy:1},{dx:3,dy:-1},{dx:-3,dy:1},{dx:-3,dy:-1},{dx:1,dy:3},{dx:1,dy:-3},{dx:-1,dy:3},{dx:-1,dy:-3}];
 
+const move_audio = new Audio('sounds/move.mp3');
+const capture_audio = new Audio('sounds/capture.mp3');
+
+
 function slide(vectors) { return vectors.map(v => ({...v, slide: true})); }
 function step(vectors) { return vectors.map(v => ({...v, slide: false})); }
 
@@ -554,8 +558,8 @@ function cellClick(x, y) {
 }
 
 function makeMove(fromX, fromY, move) {
-    log(white_kings);
-    log(black_kings);
+    // log(white_kings);
+    // log(black_kings);
     const toX = move.x;
     const toY = move.y;
     const piece = board[fromY][fromX];
@@ -578,6 +582,7 @@ function makeMove(fromX, fromY, move) {
 
     if (target) {
         log(PIECE_TYPES[target.type].role)
+        capture_audio.play();
         captureHappened = true;
         enemyType = target.type;
         piece.xp += 1;
@@ -638,6 +643,10 @@ function makeMove(fromX, fromY, move) {
             log('boom!!!!!');
             // return;
         }
+    }
+
+    else {
+        move_audio.play();
     }
 
     // ПЕРЕМЕЩЕНИЕ ФИГУРЫ
