update knight and bishop evolutions

--- a/evolution-chess-2-alfa/evolutino-chess.html
+++ b/evolution-chess-2-alfa/evolutino-chess.html
@@ -339,8 +339,8 @@ const EVOLUTION_TREE = {
     'pawn_spearman': ['pawn_spartan'],
     
     'knight_camel': ['knight_camel_hybrid', 'knight_endless'],
-    'knight_paladin': ['knight_crusader', 'knight_king'],
-    'knight_knight': ['knight_king', 'rook'],
+    'knight_paladin': ['knight_king', 'rook'],
+    'knight_knight': ['knight_king', 'rook', 'bishop_ship'],
 
     'two_color_bishop': ['rook', 'bishop_ship'],
     'bishop_bomber': ['bishop_nuke'],
